feat: add new Shadow variable listener (#954)
This pull request introduces a new shadow variable that automatically
updates a list of elements in a planning list variable. It sources
inverse and previous elements shadow variables and cascades updates to
the next elements of a given domain entity.